# syntax-highlighting-in-rust

./: Cargo.toml  build.rs  readme.md
assets/: ansi-dark.tmTheme
src/: main.rs
