[package]
name = "syntax-highlighting-in-rust"
version = "0.1.0"
authors = ["ducaale <sharaf.13@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = "4.4"
ansi_term = "0.12"
indoc = "1.0"

[build-dependencies]
syntect = "4.4"